--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -18,4 +18,4 @@ jobs:
         uses: gradle/gradle-build-action@v2
 
       - name: Execute Gradle build
-        run: ./gradlew check
+        run: gradlew check
