--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,8 +11,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          distribution: 'zulu'
-          java-version: 11
+          java-version: '17'
+          architecture: x64
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
