--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,28 @@
-#Gradle
-org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx2048M"
-#Kotlin
-kotlin.code.style=official
-kotlin.native.cacheKind=none
-kotlin.jvm.target.validation.mode=IGNORE
-#Android
-android.useAndroidX=true
-android.nonTransitiveRClass=true
-#MPP
-kotlin.mpp.enableGranularSourceSetsMetadata=true
-kotlin.native.enableDependencyPropagation=false
-kotlin.mpp.enableCInteropCommonization=true
-kotlin.mpp.androidSourceSetLayoutVersion=2
+## For more details on how to configure your build environment visit
+# http://www.gradle.org/docs/current/userguide/build_environment.html
+#
+# Specifies the JVM arguments used for the daemon process.
+# The setting is particularly useful for tweaking memory settings.
+# Default value: -Xmx1024m -XX:MaxPermSize=256m
+# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+#
+# When configured, Gradle will run in incubating parallel mode.
+# This option should only be used with decoupled projects. More details, visit
+# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
+# org.gradle.parallel=true
+#Thu Mar 16 19:52:13 EET 2023
 org.jetbrains.compose.experimental.uikit.enabled=true
+android.nonTransitiveRClass=true
 kotlin.version=1.8.10
-agp.version=7.1.3
 compose.version=1.3.0
+kotlin.native.enableDependencyPropagation=false
+org.gradle.jvmargs=-Xmx16384M -Dfile.encoding\=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx16384M"
+org.gradle.parallel=true
+android.useAndroidX=true
+kotlin.native.cacheKind=none
+kotlin.code.style=official
+kotlin.mpp.enableCInteropCommonization=true
+agp.version=7.1.3
+kotlin.jvm.target.validation.mode=IGNORE
+kotlin.mpp.androidSourceSetLayoutVersion=2
+kotlin.mpp.enableGranularSourceSetsMetadata=true
