try: change check for to shared:check

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -19,4 +19,4 @@ jobs:
         uses: gradle/gradle-build-action@v2
 
       - name: Execute Gradle build
-        run: gradle check
+        run: gradle shared:check
