--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -5,7 +5,7 @@ jobs:
   tests:
     strategy:
       matrix:
-        os: [ ubuntu-22.04, windows-2022, self-hosted-person-mac-book-pro ]
+        os: [ ubuntu-22.04, windows-2022, macos-12 ]
     runs-on: ${{ matrix.os }}
     continue-on-error: true
     steps:
