Turn off auto review

--- a/.github/workflows/android_nightly_deploy.yml
+++ b/.github/workflows/android_nightly_deploy.yml
@@ -17,4 +17,5 @@ jobs:
           packageName: org.mixdrinks.app
           releaseFiles: android/release/android-release.aab
           track: beta
+          changesNotSentForReview: true
           status: completed
