chose: change nightly build to manual trigger

--- a/.github/workflows/android_nightly_deploy.yml
+++ b/.github/workflows/android_nightly_deploy.yml
@@ -1,9 +1,6 @@
 name: Publish Android Nightly build
 
-on:
-  push:
-    branches:
-      - feat/prepare_for_google_pla
+on: workflow_call
 
 jobs:
   build:
