--- a/.github/workflows/android_nightly_deploy.yml
+++ b/.github/workflows/android_nightly_deploy.yml
@@ -74,6 +74,7 @@ jobs:
           status: completed
   after_deploy:
     needs: [ deploy_android ]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions-ecosystem/action-push-tag@v1
         with:
