--- a/.github/workflows/android_nightly_deploy.yml
+++ b/.github/workflows/android_nightly_deploy.yml
@@ -24,7 +24,8 @@ jobs:
         id: set-output
         run: |
           echo "mix_drinks_mobile_version_name=${{ steps.bump-semver.outputs.new_version }}" >> $GITHUB_OUTPUT
-          echo "mix_drinks_mobile_version_code=${mix_drinks_mobile_version_name//.}" >> $GITHUB_OUTPUT
+          mix_drinks_mobile_version_code=${echo "${{ steps.bump-semver.outputs.new_version }}" | sed 's/\.//g'}
+          echo "mix_drinks_mobile_version_code=${mix_drinks_mobile_version_code}" >> $GITHUB_OUTPUT
       - name: "Print output"
         run: |
           echo -e "Version name is: \n ${{ steps.set-output.outputs.mix_drinks_mobile_version_name }}"
