--- a/.github/workflows/android_nightly_deploy.yml
+++ b/.github/workflows/android_nightly_deploy.yml
@@ -77,6 +77,7 @@ jobs:
     needs: [ deploy_android ]
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: actions-ecosystem/action-push-tag@v1
         with:
           tag: ${{ needs.prepare_deploy.outputs.output_write_mix_drinks_mobile_version_name }}
