--- a/.github/workflows/ios_deploy.yml
+++ b/.github/workflows/ios_deploy.yml
@@ -58,6 +58,12 @@ jobs:
           echo "Building app..."
           cd iosApp
           xcodebuild -workspace iosApp.xcworkspace -scheme iosApp -sdk iphoneos -configuration AppStoreDistribution archive -archivePath build/MixDrinksIosApp.xcarchive
+          ls build
+      - name: Xcarhive to ipa
+        run: |
+          echo "Converting xcarhive to ipa..."
+          cd iosApp
+          ls build
           xcodebuild -exportArchive -archivePath build/MixDrinksIosApp.xcarchive -exportOptionsPlist exportOptions.plist -exportPath build
           ls build
       - name: 'Upload App to TestFlight'
