--- a/iosApp/exportOptions.plist
+++ b/iosApp/exportOptions.plist
@@ -4,7 +4,7 @@
 <dict>
 	<key>destination</key>
 	<string>upload</string>
-	<key>method</key>
+	<key>ad-hoc</key>
 	<string>app-store</string>
 	<key>provisioningProfiles</key>
 	<dict>
