--- a/.github/workflows/ios_deploy.yml
+++ b/.github/workflows/ios_deploy.yml
@@ -24,20 +24,50 @@ jobs:
       - name: Build xcworkspace
         run: ./gradlew podInstall
 
-      - uses: sparkfabrik/ios-build-action@v2.1.0
+      - name: Install the Apple certificate and provisioning profile
+        env:
+          BUILD_CERTIFICATE_BASE64: ${{ secrets.MIXDRINKS_IOS_BUILD_CERTIFICATE_BASE64 }}
+          P12_PASSWORD: ${{ secrets.MIXDRINKS_IOS_P12_PASSWORD }}
+          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.MIXDRINKS_IOS_BUILD_PROVISION_PROFILE_BASE64 }}
+          KEYCHAIN_PASSWORD: ${{ secrets.MIXDRINKS_IOS_KEYCHAIN_PASSWORD }}
+        run: |
+          # create variables
+          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
+          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
+          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+
+          # import certificate and provisioning profile from secrets
+          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
+          echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode -o $PP_PATH
+
+          # create temporary keychain
+          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+
+          # import certificate to keychain
+          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security list-keychain -d user -s $KEYCHAIN_PATH
+
+          # apply provisioning profile
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+
+      - name: Build app
+        run: |
+          echo "Building app..."
+          xcrun xcodebuild -workspace iosApp/iosApp.xcworkspace -scheme iosApp -sdk iphoneos -configuration AppStoreDistribution archive -archivePath iosApp/build/MixDrinksIosApp.xcarchive
+          ls build
+      - name: Xcarhive to ipa
+        run: |
+          echo "Converting xcarhive to ipa..."
+          ls build
+          xcrun xcodebuild -exportArchive -archivePath iosApp/build/MixDrinksIosApp.xcarchive -exportOptionsPlist exportOptions.plist -exportPath iosApp/build
+          ls build
+      - name: 'Upload App to TestFlight'
+        uses: apple-actions/upload-testflight-build@v1
         with:
-          upload-to-testflight: true
-          increment-build-number: false
-          build-pods: false
-          pods-path: "iosApp/Podfile"
-          export-method: ad-hoc
-          workspace-path: "iosApp/iosApp.xcworkspace"
-          project-path: "iosApp/iosApp.xcodeproj"
-          scheme: iosApp
-          output-path: build-test.ipa
-          apple-key-id: ${{ secrets.MIXDRINKS_IOS_APPSTORE_API_KEY_ID }}
-          apple-key-issuer-id: ${{ secrets.MIXDRINKS_IOS_APPSTORE_ISSUER_ID }}
-          apple-key-content: ${{ secrets.MIXDRINKS_IOS_APPSTORE_API_PRIVATE_KEY }}
-          team-id: "9LJW42P73L"
-          team-name: "Volodymyr Stelmashchuk"
-          ios-app-id: org.mixdrinks.app9LJW42P73L
+          app-path: 'path/to/application.ipa'
+          issuer-id: ${{ secrets.MIXDRINKS_IOS_APPSTORE_ISSUER_ID }}
+          api-key-id: ${{ secrets.MIXDRINKS_IOS_APPSTORE_API_KEY_ID }}
+          api-private-key: ${{ secrets.MIXDRINKS_IOS_APPSTORE_API_PRIVATE_KEY }}
