--- a/iosApp/exportOptions.plist
+++ b/iosApp/exportOptions.plist
@@ -5,7 +5,7 @@
 	<key>teamID</key>
 	<string>9LJW42P73L</string>
     <key>method</key>
-    <string>app-store</string>
+    <string>ad-hoc</string>
 	<key>uploadSymbols</key>
 	<true/>
     <key>provisioningProfiles</key>
