--- a/.github/workflows/ios_deploy.yml
+++ b/.github/workflows/ios_deploy.yml
@@ -24,50 +24,18 @@ jobs:
       - name: Build xcworkspace
         run: ./gradlew podInstall
 
-      - name: Install the Apple certificate and provisioning profile
-        env:
-          BUILD_CERTIFICATE_BASE64: ${{ secrets.MIXDRINKS_IOS_BUILD_CERTIFICATE_BASE64 }}
-          P12_PASSWORD: ${{ secrets.MIXDRINKS_IOS_P12_PASSWORD }}
-          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.MIXDRINKS_IOS_BUILD_PROVISION_PROFILE_BASE64 }}
-          KEYCHAIN_PASSWORD: ${{ secrets.MIXDRINKS_IOS_KEYCHAIN_PASSWORD }}
-        run: |
-          # create variables
-          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
-          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
-          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
-
-          # import certificate and provisioning profile from secrets
-          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
-          echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode -o $PP_PATH
-
-          # create temporary keychain
-          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
-          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-
-          # import certificate to keychain
-          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
-          security list-keychain -d user -s $KEYCHAIN_PATH
-
-          # apply provisioning profile
-          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
-
-      - name: Build app
-        run: |
-          echo "Building app..."
-          xcrun xcodebuild -workspace iosApp/iosApp.xcworkspace -scheme iosApp -sdk iphoneos -configuration AppStoreDistribution archive -archivePath iosApp/build/MixDrinksIosApp.xcarchive
-          ls
-      - name: Xcarhive to ipa
-        run: |
-          echo "Converting xcarhive to ipa..."
-          ls
-          xcrun xcodebuild -exportArchive -archivePath iosApp/build/MixDrinksIosApp.xcarchive -exportOptionsPlist iosApp/exportOptions.plist -exportPath iosApp/build
-          ls
-      - name: 'Upload App to TestFlight'
-        uses: apple-actions/upload-testflight-build@v1
+      - name: Build IOS App
+        uses: yukiarrr/ios-build-action@v1.4.0
         with:
-          app-path: 'path/to/application.ipa'
-          issuer-id: ${{ secrets.MIXDRINKS_IOS_APPSTORE_ISSUER_ID }}
-          api-key-id: ${{ secrets.MIXDRINKS_IOS_APPSTORE_API_KEY_ID }}
-          api-private-key: ${{ secrets.MIXDRINKS_IOS_APPSTORE_API_PRIVATE_KEY }}
+            project-path: iosApp/iosApp.xcodeproj
+            p12-base64: ${{ secrets.MIXDRINKS_IOS_P12_BASE64 }}
+            mobileprovision-base64: ${{ secrets.MIXDRINKS_IOS_BUILD_PROVISION_PROFILE_BASE64 }}
+            code-signing-identity: "iPhone Distribution"
+            team-id: "9LJW42P73L"
+            certificate-password: ${{ secrets.MIXDRINKS_IOS_CERTIFICATE_PASSWORD }}
+            workspace-path: iosApp/iosApp.xcworkspace
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
+        with:
+            name: IOS IPA
+            path: "output.ipa"
