--- a/.github/workflows/ios_deploy.yml
+++ b/.github/workflows/ios_deploy.yml
@@ -40,10 +40,18 @@ jobs:
         with:
             name: IOS IPA
             path: "output.ipa"
-      - name: 'Upload app to TestFlight'
-        uses: apple-actions/upload-testflight-build@v1
-        with:
-            app-path: 'output.ipa'
-            issuer-id: ${{ secrets.MIXDRINKS_IOS_APPSTORE_ISSUER_ID }}
-            api-key-id: ${{ secrets.MIXDRINKS_IOS_APPSTORE_API_KEY_ID }}
-            api-private-key: ${{ secrets.MIXDRINKS_IOS_APPSTORE_API_PRIVATE_KEY }}
+
+      # Deploy parts
+      - name: Install private API key P8
+        env:
+            PRIVATE_API_KEY_BASE64: ${{ secrets.MIXDRINKS_IOS_APPSTORE_API_PRIVATE_KEY }}
+            API_KEY: ${{ secrets.MIXDRINKS_IOS_APPSTORE_API_KEY_ID }}
+        run: |
+            mkdir -p ~/private_keys
+            echo -n "$PRIVATE_API_KEY_BASE64" | base64 --decode --output ~/private_keys/AuthKey_$API_KEY.p8
+
+        - name: Upload app to TestFlight
+        env:
+            API_KEY: ${{ secrets.MIXDRINKS_IOS_APPSTORE_API_KEY_ID }}
+            API_ISSUER : ${{ secrets.MIXDRINKS_IOS_APPSTORE_ISSUER_ID  }}
+        run: xcrun altool --output-format xml --upload-app -f output.ipa -t ios --apiKey $API_KEY --apiIssuer $API_ISSUER
