add cron for run prod deploy each Tuesday 0 17 * * 2 at 17.00

--- a/.github/workflows/prod_deploy.yml
+++ b/.github/workflows/prod_deploy.yml
@@ -1,9 +1,8 @@
 name: Publish production build
 
 on:
-  push:
-    branches:
-      - prod_ci
+  schedule:
+    - cron: '0 17 * * 2'
   workflow_dispatch:
 
 jobs:
