--- a/.github/workflows/nightly_deploy.yml
+++ b/.github/workflows/nightly_deploy.yml
@@ -26,7 +26,13 @@ jobs:
         id: set-output
         run: |
           echo "mix_drinks_mobile_version_name=${{ steps.bump-semver.outputs.new_version }}" >> $GITHUB_OUTPUT
-          mix_drinks_mobile_version_code=$(echo ${{ steps.bump-semver.outputs.new_version }} | sed 's/\.//g' | sed "s/^0*//")
+          
+          IFS='.' read -ra version_parts <<< "$mix_drinks_mobile_version_name"
+          major=${version_parts[0]}
+          minor=${version_parts[1]}
+          patch=${version_parts[2]}
+          mix_drinks_mobile_version_code=$((major * 10000 + minor * 100 + patch))
+
           echo "mix_drinks_mobile_version_code=${mix_drinks_mobile_version_code}" >> $GITHUB_OUTPUT
       - name: "Print output"
         run: |
