--- a/.github/workflows/prod_deploy.yml
+++ b/.github/workflows/prod_deploy.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           echo "mix_drinks_mobile_version_name=${{ steps.bump-semver.outputs.new_version }}" >> $GITHUB_OUTPUT
           
-          IFS='.' read -r major minor patch <<< "$mix_drinks_mobile_version_name"
+          IFS='.' read -r major minor patch <<< "${{ steps.bump-semver.outputs.new_version }}"
           mix_drinks_mobile_version_code=$((major * 10000 + minor * 100 + patch))
 
           echo "mix_drinks_mobile_version_code=${mix_drinks_mobile_version_code}" >> $GITHUB_OUTPUT
