--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,6 +1,10 @@
 name: Run Gradle on PRs
 on: pull_request
 
+concurrency:
+    group: build-${{ github.ref }}
+    cancel-in-progress: true
+
 jobs:
   tests:
     strategy:
@@ -9,16 +13,39 @@ jobs:
     runs-on: ${{ matrix.os }}
     continue-on-error: true
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11 for x64
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-          architecture: x64
-      - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@9cf99034d287025d4ee4838498a346d99521aaa4
-        with:
-          arguments: check
+        - name: Checkout
+          uses: actions/checkout@v3
+
+        - name: Validate Gradle Wrapper
+          uses: gradle/wrapper-validation-action@v1
+
+        - name: Copy CI gradle.properties
+          run: mkdir -p ~/.gradle ; cp .github/ci-gradle.properties ~/.gradle/gradle.properties
+
+        - name: Set up JDK 11
+          uses: actions/setup-java@v3
+          with:
+              java-version: 17
+              distribution: 'zulu'
+
+        - name: Setup Gradle
+          uses: gradle/gradle-build-action@v2
+          with:
+              gradle-home-cache-cleanup: true
+              cache-read-only: ${{ github.ref != 'refs/heads/main' }}
+
+        - name: Check spotless
+          run: ./gradlew spotlessCheck --no-configuration-cache --stacktrace
+
+        - name: Build all build type
+          run: ./gradlew assemble --stacktrace
+
+        - name: Run local tests
+          run: ./gradlew testDebug --stacktrace
+
+        - name: Upload test reports
+          if: always()
+          uses: actions/upload-artifact@v3
+          with:
+              name: test-reports
+              path: '**/build/reports/tests'
