--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,11 @@
 org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
 #Kotlin
 kotlin.code.style=official
+
+# kotlin
+kotlin.compiler.execution.strategy=in-process
+kotlin.native.ignoreDisabledTargets=true
+
 #MPP
 kotlin.mpp.stability.nowarn=true
 kotlin.mpp.enableCInteropCommonization=true
