--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -31,18 +31,5 @@ jobs:
               gradle-home-cache-cleanup: true
               cache-read-only: ${{ github.ref != 'refs/heads/main' }}
 
-        - name: Check spotless
-          run: ./gradlew spotlessCheck --no-configuration-cache --stacktrace
-
-        - name: Build all build type
-          run: ./gradlew assemble --stacktrace
-
         - name: Run local tests
-          run: ./gradlew testDebug --stacktrace
-
-        - name: Upload test reports
-          if: always()
-          uses: actions/upload-artifact@v3
-          with:
-              name: test-reports
-              path: '**/build/reports/tests'
+          run: ./gradlew check --stacktrace
