--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -2,23 +2,23 @@ name: Run Gradle on PRs
 on: pull_request
 
 jobs:
-  tests:
-    strategy:
-      matrix:
-        os: [ ubuntu-22.04, windows-2022, macos-12 ]
-    runs-on: ${{ matrix.os }}
-    continue-on-error: true
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11 for x64
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-          architecture: x64
-      - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@9cf99034d287025d4ee4838498a346d99521aaa4
-        with:
-          arguments: check
+    tests:
+        strategy:
+            matrix:
+                os: [ ubuntu-22.04]
+        runs-on: ${{ matrix.os }}
+        continue-on-error: true
+        steps:
+            -   uses: actions/checkout@v3
+            -   name: Set up JDK 11 for x64
+                uses: actions/setup-java@v3
+                with:
+                    java-version: '11'
+                    distribution: 'adopt'
+                    architecture: x64
+            -   name: Validate Gradle wrapper
+                uses: gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
+            -   name: Build with Gradle
+                uses: gradle/gradle-build-action@9cf99034d287025d4ee4838498a346d99521aaa4
+                with:
+                    arguments: check
