--- a/.github/workflows/app_store_version_create.yml
+++ b/.github/workflows/app_store_version_create.yml
@@ -9,6 +9,14 @@ jobs:
     app_store_version_create:
         runs-on: macos-12
         steps:
+            -   name: Install private API key P8
+                env:
+                    PRIVATE_API_KEY_BASE64: ${{ secrets.MIXDRINKS_IOS_APPSTORE_API_PRIVATE_KEY }}
+                    API_KEY: ${{ secrets.MIXDRINKS_IOS_APPSTORE_API_KEY_ID }}
+                run: |
+                    mkdir -p ~/private_keys
+                    echo -n "$PRIVATE_API_KEY_BASE64" | base64 --decode --output ~/private_keys/AuthKey_$API_KEY.p8
+
             -   name: Get token
                 id: asc
                 uses: yuki0n0/action-appstoreconnect-token@v1.0
