--- a/iosApp/Podfile
+++ b/iosApp/Podfile
@@ -3,3 +3,7 @@ target 'iosApp' do
   platform :ios, '14.1'
   pod 'shared', :path => '../shared'
 end
+
+pod 'GoogleSignIn'
+pod 'FirebaseCore'
+pod 'FirebaseAuth'
