Try appstore rest api

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -5,7 +5,7 @@ jobs:
     tests:
         strategy:
             matrix:
-                os: [ ubuntu-22.04]
+                os: [ ubuntu-22.04 ]
         runs-on: ${{ matrix.os }}
         continue-on-error: true
         steps:
@@ -22,3 +22,26 @@ jobs:
                 uses: gradle/gradle-build-action@9cf99034d287025d4ee4838498a346d99521aaa4
                 with:
                     arguments: check
+    appstore_token:
+        runs-on: macos-12
+        steps:
+            -   name: Install private API key P8
+                env:
+                    PRIVATE_API_KEY_BASE64: ${{ secrets.MIXDRINKS_IOS_APPSTORE_API_PRIVATE_KEY }}
+                    API_KEY: ${{ secrets.MIXDRINKS_IOS_APPSTORE_API_KEY_ID }}
+                run: |
+                    mkdir -p ~/private_keys
+                    echo -n "$PRIVATE_API_KEY_BASE64" | base64 --decode --output ~/private_keys/AuthKey_$API_KEY.p8
+            -   name: Get token
+                id: asc
+                uses: yuki0n0/action-appstoreconnect-token@v1.0
+                with:
+                    issuer id: ${{ secrets.MIXDRINKS_IOS_APPSTORE_ISSUER_ID  }}
+                    key id: ${{ secrets.MIXDRINKS_IOS_APPSTORE_API_KEY_ID }}
+                    key: ~/private_keys/AuthKey_${{ secrets.MIXDRINKS_IOS_APPSTORE_API_KEY_ID }}.p8
+
+            -   name: Use token
+                run: |
+                    JSON=`curl -sS -H "Authorization:Bearer ${{ steps.asc.outputs.token }}" https://api.appstoreconnect.apple.com/v1/apps`
+
+
