--- a/.github/workflows/prod_deploy.yml
+++ b/.github/workflows/prod_deploy.yml
@@ -12,13 +12,10 @@ jobs:
             -   uses: actions/checkout@v3
                 with:
                     fetch-depth: 0
-            -   name: 'Get Previous tag'
-                id: previoustag
-                run: echo "LAST_TAG=$(git tag --sort=committerdate | tail -1)" >> $GITHUB_ENV
             -   uses: actions-ecosystem/action-bump-semver@v1
                 id: bump-semver
                 with:
-                    current_version: ${{ LAST_TAG }}
+                    current_version: $(git tag --sort=committerdate | tail -1)
                     level: patch
             -   uses: actions-ecosystem/action-push-tag@v1
                 with:
