Fixed get previues tag

--- a/.github/workflows/prod_deploy.yml
+++ b/.github/workflows/prod_deploy.yml
@@ -13,11 +13,12 @@ jobs:
                 with:
                     fetch-depth: 0
             -   name: Set env
-                run: echo "LAST_TAG=$(git tag --sort=committerdate | tail -1)" >> $GITHUB_ENV
+                id: last_tag
+                run: echo "LAST_TAG=$(git tag --sort=committerdate | tail -1)" >> $GITHUB_OUTPUT
             -   uses: actions-ecosystem/action-bump-semver@v1
                 id: bump-semver
                 with:
-                    current_version: ${LAST_TAG}
+                    current_version: ${{ steps.last_tag.outputs.LAST_TAG }}
                     level: patch
             -   uses: actions-ecosystem/action-push-tag@v1
                 with:
