--- a/.github/workflows/prod_deploy.yml
+++ b/.github/workflows/prod_deploy.yml
@@ -24,6 +24,7 @@ jobs:
             -   run: |
                     git config user.name github-actions
                     git config user.email github-actions@github.com
+                    git tag ${{ steps.bump-semver.outputs.new_version }}
                     git push --tags
             -   name: "Set output"
                 id: set-output
