--- a/.github/workflows/prod_deploy.yml
+++ b/.github/workflows/prod_deploy.yml
@@ -138,3 +138,17 @@ jobs:
                     API_KEY: ${{ secrets.MIXDRINKS_IOS_APPSTORE_API_KEY_ID }}
                     API_ISSUER: ${{ secrets.MIXDRINKS_IOS_APPSTORE_ISSUER_ID  }}
                 run: xcrun altool --output-format xml --upload-app -f output.ipa -t ios --apiKey $API_KEY --apiIssuer $API_ISSUER
+            -   name: Get appstore token
+                id: asc
+                uses: yuki0n0/action-appstoreconnect-token@v1.0
+                with:
+                    issuer id: ${{ secrets.MIXDRINKS_IOS_APPSTORE_ISSUER_ID  }}
+                    key id: ${{ secrets.MIXDRINKS_IOS_APPSTORE_ADMIN_API_KEY_ID }}
+                    key: ${{ secrets.MIXDRINKS_IOS_APPSTORE_ADMIN_API_PRIVATE_KEY_RAW }}
+
+            -   name: Create appstore version
+                env:
+                    APP_VERSION: ${{ env.MIXDRINKS_MOBILE_APP_VERSION_NAME }}
+                run: |
+                    JSON=`curl -sS -H "Authorization:Bearer ${{ steps.asc.outputs.token }}" https://api.appstoreconnect.apple.com/v1/appStoreVersions -d '{"data": {"type": "appStoreVersions","attributes": {"platform": "IOS","versionString": "${APP_VERSION}","copyright": "© 2020 MixDrinks","releaseType": "MANUAL","usesIdfa": false},"relationships": {"app": {"data": {"type": "apps","id": "6447103081"}}}}}' -H 'Content-Type: application/json'`
+                    echo $JSON
