--- a/.github/workflows/prod_deploy.yml
+++ b/.github/workflows/prod_deploy.yml
@@ -117,6 +117,7 @@ jobs:
                     code-signing-identity: "iPhone Distribution"
                     team-id: ${{ secrets.MIXDRINKS_IOS_TEAM_ID }}
                     certificate-password: ${{ secrets.MIXDRINKS_IOS_CERTIFICATE_PASSWORD }}
+                    export-options: iosApp/exportOptionsRelease.plist
                     workspace-path: iosApp/iosApp.xcworkspace
                     export-method: "app-store"
             -   name: "Upload IPA file as artifact"
