Fix google file

--- a/iosApp/exportOptionsRelease.plist
+++ b/iosApp/exportOptionsRelease.plist
@@ -5,7 +5,7 @@
 	<key>method</key>
 	<string>app-store</string>
 
-    <key>org.mixdrinks.app</key>
+    <key>org.mixdrinks.app9LJW42P73L</key>
     <string>Production(signIn)</string>
 </dict>
 </plist>
