--- a/iosApp/exportOptionsRelease.plist
+++ b/iosApp/exportOptionsRelease.plist
@@ -2,10 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>method</key>
-	<string>app-store</string>
-
-    <key>org.mixdrinks.app9LJW42P73L</key>
-    <string>Production(signIn)</string>
+    <key>method</key>
+    <string>app-store</string>
+    <key>provisioningProfiles</key>
+        <dict>
+            <key>org.mixdrinks.app9LJW42P73L</key>
+            <string>Production(signIn)</string>
+        </dict>
 </dict>
 </plist>
