--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,12 +13,10 @@ jobs:
             -   name: Set up JDK 11 for x64
                 uses: actions/setup-java@v3
                 with:
-                    java-version: '11'
+                    java-version: '17'
                     distribution: 'adopt'
                     architecture: x64
-            -   name: Validate Gradle wrapper
-                uses: gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
             -   name: Build with Gradle
-                uses: gradle/gradle-build-action@9cf99034d287025d4ee4838498a346d99521aaa4
+                uses: gradle/gradle-build-action@v2.5.1
                 with:
                     arguments: check
