--- a/.github/workflows/nightly_deploy.yml
+++ b/.github/workflows/nightly_deploy.yml
@@ -4,6 +4,7 @@ on:
     push:
         branches:
             - main
+            - ci_new_2
     workflow_dispatch:
 
 jobs:
@@ -92,8 +93,9 @@ jobs:
             -   uses: actions/checkout@v3
             -   uses: actions/setup-java@v3
                 with:
-                    distribution: 'zulu'
                     java-version: '17'
+                    distribution: 'adopt'
+                    architecture: x64
 
             -   name: "Setup Gradle"
                 uses: gradle/gradle-build-action@v2
