--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -80,16 +80,15 @@ jobs:
                 with:
                     project-path: iosApp/iosApp.xcodeproj
                     p12-base64: ${{ secrets.MIXDRINKS_IOS_P12_BASE64 }}
-                    mobileprovision-base64: ${{ secrets.MIXDRINKS_IOS_BUILD_PROVISION_PROFILE_BASE64_TESTFLY }}
+                    mobileprovision-base64: ${{ secrets.PROD_MIXDRINKS_IOS_BUILD_PROVISION_PROFILE_BASE64 }}
                     code-signing-identity: "iPhone Distribution"
                     team-id: ${{ secrets.MIXDRINKS_IOS_TEAM_ID }}
                     certificate-password: ${{ secrets.MIXDRINKS_IOS_CERTIFICATE_PASSWORD }}
-                    export-options: iosApp/exportOptionsTestFly.plist
+                    export-options: iosApp/exportOptionsRelease.plist
                     workspace-path: iosApp/iosApp.xcworkspace
-                    export-method: "ad-hoc"
+                    export-method: "app-store"
             -   name: "Upload IPA file as artifact"
                 uses: actions/upload-artifact@v3
                 with:
                     name: IOS IPA
                     path: "output.ipa"
-
