--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -70,7 +70,7 @@ jobs:
                     distribution: 'adopt'
                     architecture: x64
 
-            -   name: Build with Gradle
+            -   name: Build pod install
                 uses: gradle/gradle-build-action@v2.5.1
                 with:
                     arguments: podInstall
