Implement firebase traking

--- a/iosApp/Podfile
+++ b/iosApp/Podfile
@@ -1,3 +1,9 @@
+use_frameworks!
+
+platform :ios, '15.0'
+
+install! 'cocoapods', :deterministic_uuids => false
+
 target 'iosApp' do
   use_frameworks!
   platform :ios, '14.1'
